--- a/src/Renderizando Fotos/imagens.html
+++ b/src/Renderizando Fotos/imagens.html
@@ -7,7 +7,7 @@
      <body>
           <div class="leftRigth"></div>
           <div class="center">
-               <h1>Aqui está a árvores de cada estação do ano</h1>
+               <h1>Aqui está uma árvore no:</h1>
                <h2 class="Inverno">Inverno</h2>
                <h2 class="Outono">Outono</h2>
                <h2 class="Verao">Verão</h2>
